--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Prime Calculator</string>
+    <string name="Open">Prime Calculator</string>
+    <string name="Close">Prime Calculator</string>
 
 </resources>
