--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,16 +2,36 @@
     <string name="app_name">Prime Calculator</string>
 
 
-    <string name="isPrime">è primo?</string>
-    <string name="numberPrimeLessN">numeri primi minori di n</string>
-    <string name="FactPrimeN">fattorizzare n in numeri primi</string>
-    <string name="Eulero">funzione di eulero</string>
-    <string name="NTwins">n-esima coppia di numeri gemelli</string>
-    <string name="NPrime">n-esimo primo</string>
+    <string name="isPrime">È PRIMO?</string>
+    <string name="numberPrimeLessN">NUMERI PRIMI MINORI DI N</string>
+    <string name="FactPrimeN">FATTORIZZAZIONE DI N IN NUMERI PRIMI</string>
+    <string name="Eulero">FUNZIONE DI EULERO</string>
+    <string name="NTwins">N-ESIMA COPPIA DI NUMERI PRIMI GEMELLI</string>
+    <string name="NPrime">N-ESIMO PRIMO</string>
 
 
-    <string name="isPrimeDes">ciao mancio</string>
+    <string name="isPrimeDes">Verifica se il numero scelto è primo. In matematica, un numero primo (in breve anche primo)
+        è un numero intero positivo che abbia esattamente due divisori distinti. In modo equivalente si può definire come
+        un numero naturale maggiore di 1 che sia divisibile solamente per 1 e per sé stesso</string>
+    <string name="primeNumCountDes">Conta quanti sono i numeri primi minori del numero scelto</string>
+    <string name="factPrimeDes">Esegue la fattorizzazione in numeri primi del numero scelto. La
+        scomposizione in fattori primi, o fattorizzazione in numeri primi, è un procedimento algebrico
+        che permette di riscrivere un numero naturale come prodotto di numeri primi. Se il
+        numero scelto è primo, la sua fattorizzazione coinciderà proprio con esso</string>
+    <string name="euleroDes">Esegue la funzione di eulero del numero scelto. In matematica, la funzione φ
+        di Eulero o semplicemente funzione di Eulero o toziente, è una funzione definita, per ogni intero positivo n,
+        come il numero degli interi compresi tra 1 e n che sono coprimi con n. Ad esempio, φ(8)=4 poiché i numeri coprimi
+        di 8 sono quattro: 1, 3, 5, 7. Deve il suo nome al matematico svizzero Eulero, che per primo la descrisse.</string>
+    <string name="nTwinsDes">Calcola la n-esima coppia di numeri primi gemelli, dove n è il numero dato. In matematica, si
+        definiscono numeri primi gemelli due numeri primi che differiscono tra loro di due. Fatta eccezione per la coppia (2, 3),
+        questa è la più piccola differenza possibile fra due primi. Alcuni esempi di coppie di primi gemelli sono 5 e 7, 11 e 13,
+        e 821 e 823.</string>
+    <string name="nPrimeDes">Calcola il numero primo in posizione n, dove n è il numero dato</string>
 
-
+    <string name="primeNumCountID">I numeri primi minori di N sono: </string>
+    <string name="euleroID">La funzione di Eulero di N è: </string>
+    <string name="nTwinsID">La N-esima coppia di numeri gemelli è: </string>
+    <string name="nPrimeID">Il numero primo in posizione N è: </string>
+    <string name="showFactID">La fattorizzazione di N è: </string>
 </resources>
 
