--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -7,12 +7,12 @@
     <string name="Eulero">FUNZIONE DI EULERO</string>
     <string name="NTwins">N-ESIMA COPPIA DI NUMERI PRIMI GEMELLI</string>
     <string name="NPrime">N-ESIMO PRIMO</string>
-    <string name="isPrimeDes">Verifica se il numero scelto è primo. In matematica, un numero primo (in breve anche primo) è un numero intero positivo che abbia esattamente due divisori distinti. In modo equivalente si può definire come un numero naturale maggiore di 1 che sia divisibile solamente per 1 e per sé stesso</string>
-    <string name="primeNumCountDes">Conta quanti sono i numeri primi minori del numero scelto</string>
-    <string name="factPrimeDes">Esegue la fattorizzazione in numeri primi del numero scelto. La scomposizione in fattori primi, o fattorizzazione in numeri primi, è un procedimento algebrico che permette di riscrivere un numero naturale come prodotto di numeri primi. Se il numero scelto è primo, la sua fattorizzazione coinciderà proprio con esso</string>
+    <string name="isPrimeDes">Verifica se il numero scelto è primo. In matematica, un numero primo (in breve anche primo) è un numero intero positivo che abbia esattamente due divisori distinti. In modo equivalente si può definire come un numero naturale maggiore di 1 che sia divisibile solamente per 1 e per sé stesso.</string>
+    <string name="primeNumCountDes">Conta quanti sono i numeri primi minori del numero scelto.</string>
+    <string name="factPrimeDes">Esegue la fattorizzazione in numeri primi del numero scelto. La scomposizione in fattori primi, o fattorizzazione in numeri primi, è un procedimento algebrico che permette di riscrivere un numero naturale come prodotto di numeri primi. Se il numero scelto è primo, la sua fattorizzazione coinciderà proprio con esso.</string>
     <string name="euleroDes">Esegue la funzione di eulero del numero scelto. In matematica, la funzione φ di Eulero o semplicemente funzione di Eulero o toziente, è una funzione definita, per ogni intero positivo n, come il numero degli interi compresi tra 1 e n che sono coprimi con n. Ad esempio, φ(8)=4 poiché i numeri coprimi di 8 sono quattro: 1, 3, 5, 7. Deve il suo nome al matematico svizzero Eulero, che per primo la descrisse.</string>
     <string name="nTwinsDes">Calcola la n-esima coppia di numeri primi gemelli, dove n è il numero dato. In matematica, si definiscono numeri primi gemelli due numeri primi che differiscono tra loro di due. Fatta eccezione per la coppia (2, 3), questa è la più piccola differenza possibile fra due primi. Alcuni esempi di coppie di primi gemelli sono 5 e 7, 11 e 13, e 821 e 823.</string>
-    <string name="nPrimeDes">Calcola il numero primo in posizione n, dove n è il numero dato</string>
+    <string name="nPrimeDes">Calcola il numero primo in posizione n, dove n è il numero dato.</string>
     <string name="primeNumCountID">I numeri primi minori di N sono:</string>
     <string name="euleroID">La funzione di Eulero di N è:</string>
     <string name="nTwinsID">La N-esima coppia di numeri gemelli è:</string>
@@ -20,7 +20,7 @@
     <string name="showFactID">La fattorizzazione di N è:</string>
     <string name="soundOn">Suono On</string>
     <string name="soundOff">Suono Off</string>
-    <string name="Information">Informazioni</string>
+    <string name="Information">INFORMAZIONI</string>
     <string name="GN">Gruppo TicAndTac:</string>
     <string name="NumberP">Il numero è primo</string>
     <string name="NumberNotP">Il numero non è primo</string>
@@ -30,6 +30,18 @@
     <string name="Zero">Inserire un numero maggiore di 0</string>
     <string name="CleanCrono">PULISCI LA CRONOLOGIA</string>
     <string name="dontShowMeAgain">Non mostrare più</string>
-    <string name="warnings">N-ESIMA COPPIA DI NUMERI PRIMI GEMELLI e N-ESIMO PRIMO hanno un upper bound poichè usarle con numeri troppo grandi i calcoli diventano pesanti</string>
+    <string name="warnings">Le funzioni: N-ESIMA COPPIA DI NUMERI PRIMI GEMELLI e N-ESIMO PRIMO hanno un upper bound poichè usarle con numeri troppo grandi i calcoli diventerebbero pesanti. L\'upper bound dipende dalla potenza di calcolo del dispositivo su cui è stata installata l\'app.</string>
     <string name="warningsTitle">ATTENZIONE !</string>
+    <string name="ticandtac_group">Gruppo TicAndTac :</string>
+    <string name="closeApp">CHIUDI L\'APPLICAZIONE</string>
+    <string name="yes">si</string>
+    <string name="clearAll">Cronologia pulita</string>
+    <string name="userGuide">MANUALE D\'USO</string>
+    <string name="buttonFunc">FUNZIONE</string>
+    <string name="buttonFuncDes">Pemi questo bottone per avere informazioni sulla funzione scelta.</string>
+    <string name="excp">Inserisci un numero</string>
+    <string name="soundDes" translatable="false">Usa questo bottone per accendere o spegnere il suono.</string>
+    <string name="infoDes">Premi questo bottone per conoscere i creatori dell\'app.</string>
+    <string name="Adv1">Le funzioni: N-ESIMA COPPIA DI NUMERI PRIMI GEMELLI e N-ESIMO PRIMO hanno un upper bound poichè usarle con numeri troppo grandi i calcoli diventerebbero pesanti. L\'upper bound dipende dalla potenza di calcolo del dispositivo su cui è stata installata l\'app.</string>
+    <string name="Adv2">Le altre funzioni possono essere usate anche per numeri grandi poichè sono molto meno pesanti.</string>
 </resources>
